--- a/src/OverBlaze/OverBlaze.csproj
+++ b/src/OverBlaze/OverBlaze.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="Blazored.Modal" Version="6.0.1" />
+    <PackageReference Include="TwitchLib.Client" Version="3.2.1" />
   </ItemGroup>
 
 </Project>
