Add Twitch OIDC authentication

--- a/src/OverBlaze/Properties/launchSettings.json
+++ b/src/OverBlaze/Properties/launchSettings.json
@@ -4,7 +4,7 @@
       "commandName": "Project",
       "dotnetRunMessages": "true",
       "launchBrowser": true,
-      "launchUrl": "https://localhost:5001/Dashboard",
+      "launchUrl": "http://localhost:25293/Dashboard",
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
