--- a/src/OverBlaze/appsettings.Development.json
+++ b/src/OverBlaze/appsettings.Development.json
@@ -6,5 +6,8 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "Launch": {
+    "Browser": "C:\\Program Files\\Google\\Chrome Dev\\Application\\chrome.exe"
   }
 }
