--- a/src/OverBlaze/Properties/launchSettings.json
+++ b/src/OverBlaze/Properties/launchSettings.json
@@ -3,7 +3,7 @@
     "OverBlaze": {
       "commandName": "Project",
       "dotnetRunMessages": "true",
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "http://localhost:25293/Dashboard",
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
