--- a/src/OverBlaze/OverBlaze.csproj
+++ b/src/OverBlaze/OverBlaze.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -12,6 +12,7 @@
     <PackageReference Include="TwitchLib.Api" Version="3.2.3" />
     <PackageReference Include="TwitchLib.Client" Version="3.2.1" />
     <PackageReference Include="TwitchLib.PubSub" Version="3.2.3-preview-5500be4a524d8812e7bd37de4288610422b41fe6" />
+    <PackageReference Include="obs-websocket-dotnet" Version="4.9.0" />
   </ItemGroup>
 
 </Project>
